# aoc2025

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
1/: problem_1.py  problem_2.py
2/: problem_2.py
scripts/: new-day.py
src/: main.py
src/1/: problem_1.py  problem_2.py
src/base/: abstract_problem.py
src/day_1/: problem_1.py  problem_2.py
src/day_1/test/: test_problem_1_day_1.py  test_problem_2_day_1.py  test_problem_day_1.py  test_problem_day_2.py
src/day_2/: problem_1.py  problem_2.py
src/day_2/test/: test_problem_1_day_2.py  test_problem_2_day_2.py
src/day_3/: problem_1.py  problem_2.py
src/day_3/test/: test_problem_1_day_3.py  test_problem_2_day_3.py
src/day_4/: problem_1.py  problem_2.py
src/day_4/test/: test_problem_1_day_4.py  test_problem_2_day_4.py
src/day_5/: problem_1.py  problem_2.py
src/day_5/test/: test_problem_1_day_5.py  test_problem_2_day_5.py
src/day_6/: problem_1.py  problem_2.py
src/day_6/test/: test_problem_1_day_6.py  test_problem_2_day_6.py
src/day_7/: problem_1.py  problem_2.py
src/day_7/test/: test_problem_1_day_7.py  test_problem_2_day_7.py
src/day_8/: problem_1.py  problem_2.py
src/day_8/test/: test_problem_1_day_8.py  test_problem_2_day_8.py
