[project]
name = "aoc25"
version = "0.1.0"
description = "Collection of solutions for Advent of Code challenges 2025"
readme = "README.md"
authors = [{name = "Andrea Sessa"}]
requires-python = ">=3.10"

dependencies = [
    "pytest>=9.0.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "ruff>=0.14.7",
    "typer>=0.20.0",
]

[project.optional-dependencies]
test = ["pytest"]
